fixed alignment on Learning Activities list

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,63 +1,68 @@
-main{
-    display: grid;
-    grid-template-columns: 50px auto 50px;
-    justify-items: center;
+main {
+  display: grid;
+  grid-template-columns: 50px auto 50px;
+  justify-items: center;
 }
 
-body{
-    max-width: 700px;
-    margin: 0 auto;
-    background-color: #838E83;
-    text-align: center;
+body {
+  max-width: 700px;
+  margin: 0 auto;
+  background-color: #838e83;
+  text-align: center;
 }
 
-header{
-    /* display: flex; */
-    background-color: #6C6061;
-    width: 700px;
-    border-radius: 10px;
-    margin-top: 20px ;
+header {
+  /* display: flex; */
+  background-color: #6c6061;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin: 0 auto;
 }
 
 #profile {
-    width: 150px;
-    margin: 20px;
-    border-radius: 10px;
-    grid-column: 1/2;
+  width: 150px;
+  margin: 20px;
+  border-radius: 10px;
+  grid-column: 1/2;
 }
 
-h1{
-    grid-column: 2/3;
-    font-size: 50px;
+h1 {
+  grid-column: 2/3;
+  font-size: 50px;
 }
 
 nav {
-    display: grid;
-    background-color: white;
-    border-radius: 10px;
-    font-size: 20px;
+  display: grid;
+  background-color: white;
+  border-radius: 10px;
+  font-size: 20px;
 }
 
-
-main h2{
-     grid-column: 1/4;
-     font-size: 30px;
+main h2 {
+  grid-column: 1/4;
+  font-size: 30px;
 }
-.card{
-    background-color: white;
-    margin: 10px;
-    width: 200px;
-    grid-column: 2/4;
-    border-radius: 10px;
-}
-
-.card h3{
-    background-color: #b2bcaa;
-    margin: 5px;
-    border-radius: 5px;
-    font-size: 20px;
+.card {
+  background-color: white;
+  margin: 10px;
+  width: 200px;
+  grid-column: 2/3;
+  border-radius: 10px;
 }
 
-.card h4{
-    margin-top: 5px;
+li{
+    text-align: left;
+    margin-left: 40px;
+    margin-right: auto;
+}
+
+.card h3 {
+  background-color: #b2bcaa;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.card h4 {
+  margin-top: 5px;
 }
